--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Run k6 load test
         id: k6-test
         run: |
-          k6 run test.js --out json=results.json
+          k6 run test.js --out json=results.json --summary-export=summary.json  # Adicionando o summary-export para gerar o summary.json
 
       # Comparar os resultados com o baseline e enviar e-mail em caso de falha
       - name: Compare with baseline and send email if failed
@@ -44,19 +44,11 @@ jobs:
           BASELINE_AVG_RESPONSE_TIME=1000  # Tempo médio de resposta esperado (em ms)
           BASELINE_RQPS=10  # Exemplo de baseline de requests por segundo
 
-          # Obter o número de requests e o tempo médio de resposta do arquivo de resultados
-          TOTAL_REQUESTS=$(jq '.[0].metrics.requests.count' results.json)
-          AVG_RESPONSE_TIME=$(jq '.[0].metrics.http_req_duration.avg' results.json)
-          TEST_DURATION=$(jq '.[0].metrics.http_reqs.duration' results.json | jq 'last')  # Obter a duração do teste
-
-          # Calcular requests por segundo (RQPS)
-          if [ "$TEST_DURATION" -gt 0 ]; then
-            RQPS=$(echo "$TOTAL_REQUESTS / $TEST_DURATION" | bc -l)
-          else
-            RQPS=0
-          fi
-
-          echo "Requests por segundo: $RQPS"
+          # Obter os dados consolidados do summary.json
+          TOTAL_REQUESTS=$(jq '.metrics.requests.count' summary.json)
+          AVG_RESPONSE_TIME=$(jq '.metrics.http_req_duration.avg' summary.json)
+          RQPS=$(jq '.metrics.requests.rate' summary.json)
+          ERROR_RATE=$(jq '.error_rate' summary.json)
 
           # Inicializar uma variável de mensagem de erro
           ERROR_MESSAGE="Falha nos testes de desempenho! Resultados abaixo do esperado:"
@@ -74,6 +66,11 @@ jobs:
 
           if [ "$(echo "$RQPS < $BASELINE_RQPS" | bc -l)" -eq 1 ]; then
             ERROR_MESSAGE="$ERROR_MESSAGE\n- Requests por segundo abaixo do esperado: Esperado >= $BASELINE_RQPS, Obtido: $RQPS"
+            echo $ERROR_MESSAGE
+          fi
+
+          if [ "$(echo "$ERROR_RATE > 0" | bc -l)" -eq 1 ]; then
+            ERROR_MESSAGE="$ERROR_MESSAGE\n- Taxa de erro acima do esperado: Esperado = 0, Obtido: $ERROR_RATE"
             echo $ERROR_MESSAGE
           fi
 
